--- a/src/components/navbar/MobileMenuModal.module.scss
+++ b/src/components/navbar/MobileMenuModal.module.scss
@@ -1,5 +1,6 @@
 @use "../../variables.module.scss" as *;
 .mobile-menu-modal {
+  z-index: 10;
   position: absolute;
   background: rgba(0, 0, 0, 0.5);
   left: 0;
