--- a/src/mixins.module.scss
+++ b/src/mixins.module.scss
@@ -1,11 +1,23 @@
 @mixin media($breakpoint) {
+  @if ($breakpoint == "phone") {
+    @media only screen and (max-width: 767px) {
+      @content;
+    }
+  }
   @if ($breakpoint == "tablet") {
+    @media only screen and (min-width: 768px) and (max-width: 1199px) {
+      @content;
+    }
+  }
+  @if ($breakpoint == "shared") {
+    //styles shared between tablets and desktops
     @media only screen and (min-width: 768px) {
       @content;
     }
   }
-  @if ($breakpoint==small) {
-    @media only screen and (min-width: 1280px) {
+
+  @if ($breakpoint == "desktop") {
+    @media only screen and (min-width: 1200px) {
       @content;
     }
   }
