--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -8,7 +8,7 @@
   @include mixins.media(tablet) {
     margin-inline: 4rem !important;
   }
-  @include mixins.media(small) {
+  @include mixins.media(desktop) {
     margin-inline: 16.5rem !important;
   }
 }
@@ -17,7 +17,17 @@
   display: flex;
   flex-direction: column;
   gap: 12rem;
-  @include mixins.media(tablet) {
+  @include mixins.media(shared) {
     gap: 16rem;
+  }
+  @include mixins.media(desktop) {
+    &::after {
+      z-index: 0;
+      position: absolute;
+      content: url("../../assets/shared/desktop/bg-pattern-leaf.svg");
+      width: 100%;
+      height: 100%;
+      top: 50rem;
+    }
   }
 }
